updates package from quill to new package

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -12,10 +12,7 @@
     "jsx": "react-jsx",
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "baseUrl": ".",
-    "paths": {
-      "@quill/*": ["../../quill/src/*"]
-    }
+    "baseUrl": "."
   },
   "include": ["src"]
 }
