--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "textforge": "^1.0.0",
+    "@tiptap/core": "^3.3.0",
     "@tiptap/extension-code-block-lowlight": "^3.3.0",
     "@tiptap/extension-file-handler": "^3.3.0",
     "@tiptap/extension-highlight": "^3.3.0",
     "@tiptap/extension-image": "^3.3.0",
     "@tiptap/extension-mathematics": "^3.3.0",
+    "@tiptap/extension-placeholder": "^3.3.1",
     "@tiptap/pm": "^3.3.0",
     "@tiptap/react": "^3.3.0",
     "@tiptap/starter-kit": "^3.3.0",
-    "highlight.js": "^11.9.0",
     "katex": "^0.16.22",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.541.0",
