--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tiptap/core": "^3.4.1",
+    "@tiptap/extension-code-block-lowlight": "^3.4.1",
+    "@tiptap/extension-file-handler": "^3.4.1",
+    "@tiptap/extension-highlight": "^3.4.1",
+    "@tiptap/extension-image": "^3.4.1",
+    "@tiptap/extension-mathematics": "^3.4.1",
+    "@tiptap/extension-placeholder": "^3.4.1",
+    "@tiptap/pm": "^3.4.1",
+    "@tiptap/react": "^3.4.1",
+    "@tiptap/starter-kit": "^3.4.1",
+    "katex": "^0.16.22",
+    "lowlight": "^3.3.0",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "textforge": "^1.1.2"
+    "textforge": "^1.2.3"
   },
   "devDependencies": {
     "@types/react": "^19.1.10",
