--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ backend/noet.db-wal
 backend/noet.db-shm
 backend/.gopath
 backend/noet.db
-backend
 uploads
 .DS_Store
 frontend/node_modules/.bin
@@ -17,3 +16,7 @@ frontend/node_modules/@jridgewell
 frontend/node_modules/@remirror
 frontend/node_modules/@rolldown
 frontend/node_modules
+backend/noet-server
+backend/backend
+backend/static
+backend/static
