--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "@tiptap/pm": "^3.4.1",
     "@tiptap/react": "^3.4.1",
     "@tiptap/starter-kit": "^3.4.1",
+    "@types/marked": "^5.0.2",
     "katex": "^0.16.22",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.542.0",
+    "marked": "^16.2.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "textforge": "^1.2.8"
